--- a/xyz-player-component/xyz-player.html
+++ b/xyz-player-component/xyz-player.html
@@ -1,49 +1,35 @@
 <div class="xyz-player" ng-if="spaceIsOpen()">
 
+  <div ng-if="!getNowPlaying().title">
+    loading...
+  </div>
+
+
   <h4>{{message}}</h4>
 
-  <center>
+  <div ng-show="getNowPlaying()">
+
     <h1>{{space.name}} </h1>
 
-    <span ng-if="getNowPlaying().title">
+  <span class="media-controls">
+      <md-icon class="icon light material-icons" ng-click="play()">play_arrow</md-icon>
+      <md-icon class="icon light material-icons" ng-click="pause()">pause</md-icon>
+  </span>
 
-      <h3>{{getNowPlaying().title}}</h3>
+    <h3 class="player-title" ng-if="getNowPlaying().title">{{getNowPlaying().title}}</h3>
 
-      <span class="media-controls">
-
-        <button ng-click="play()">
-          <md-icon class="material-icons">play_arrow</md-icon>
-        </button>
-        <button ng-click="pause()">
-          <md-icon class="material-icons">pause</md-icon>
-        </button>
-      </span>
-
-      <div class="progress-bar" ng-if="false">
-        <h3>scrubbing / song progress indicator</h3>
-      </div>
-      <div class="volume control" ng-if="false">
-        <h3>volume control</h3>
-      </div>
-    </span>
-
-    <div ng-if="!getNowPlaying().title">
-      loading...
-    </div>
     <div class="media-box">
 
       <div ng-include="'xyz-player-component/mock-media-provider/mock-media-provider-view.html'"
            ng-controller="mockProviderCtrl"
-           ng-if="getNowPlaying().provider === 'mock'"
-      >
+           ng-if="getNowPlaying().provider === 'mock'">
 
       </div>
 
 
       <div youtube
            ng-show="getNowPlaying().provider === 'youtube'"
-           videoid="{{youtubeId}}"
-      >
+           videoid="{{youtubeId}}">
 
         YT player provider view (i should get replaced)
 
@@ -57,7 +43,6 @@
 
 
     </div>
+  </div>
 
-
-  </center>
 </div>
