improve sidebar - consolidate tabs to 'add media'.  second tab is 'edit space'

--- a/stream/index.html
+++ b/stream/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>XYZ STREAM </title>
   <link rel="stylesheet" type="text/css" href="style.css">
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
 </head>
 <body>
 <div ng-app="xyzStream">
 
   <h4 class="powered-by">powered by xyz</h4>
   <div ng-controller="streamController">
+    <center>
+      <div xyz-player>
 
-    <div xyz-player>
-
-    </div>
-
+      </div>
+    </center>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="vendor/angular/angular.js"></script>
@@ -82,6 +82,7 @@
     </script>
     <!-- /build -->
 
+  </div>
 </div>
 </body>
 
