--- a/client/index.html
+++ b/client/index.html
@@ -81,6 +81,7 @@
 <script src="scripts/services/mediaapi.js"></script>
 <script src="scripts/services/utility.js"></script>
 <script src="scripts/directives/previewing.js"></script>
+<script src="scripts/directives/loading.js"></script>
 <script src="scripts/controllers/preview.js"></script>
 <script src="scripts/services/player.js"></script>
 <script src="scripts/controllers/landing.js"></script>
