fix loading indicator

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
   <!-- endbuild -->
 
 
-  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
@@ -40,14 +40,13 @@
 <script src="vendor/angular-resource/angular-resource.js"></script>
 <script src="vendor/angular-animate/angular-animate.js"></script>
 <script src="vendor/angular-aria/angular-aria.js"></script>
-<script src="vendor/angular-material/angular-material.js"></script>
 <script type="text/javascript" src="vendor/angular-live-set/dist/live-set.js"></script>
 
 <!-- endbower -->
 
 
 <!-- endbuild -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.js"></script>
 
 <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
 
