--- a/stream/index.html
+++ b/stream/index.html
@@ -60,7 +60,7 @@
           .constant('apiKeys', {
             sc: 'c29e4129f2bba3771a5472a65cad37e4',
             yt: 'AIzaSyAv5-et2TSQ3VsA5eKLviq2KjfExzFLxO8',
-            fb_app_id: '1507355422928214'// PROD: '1381485208848570'
+            fb_app_id: '1507355422928214'
           });
 
 
@@ -75,7 +75,7 @@
             apiBaseUrl: '%%%API_URL'
           })
           .constant('apiKeys', {
-            sc: '%%%scKey', yt: '%%%ytKey', fb_app_id: '%%%facebookAppId'// PROD: '1381485208848570'
+            sc: '%%%scKey', yt: '%%%ytKey', fb_app_id: '%%%facebookAppId'
           });
     </script>
     <!-- /build -->
