html minor rework

--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
 <script src="vendor/angular-resource/angular-resource.js"></script>
 <script src="vendor/angular-animate/angular-animate.js"></script>
 <script src="vendor/angular-aria/angular-aria.js"></script>
+<script src="vendor/angular-ellipsis/src/angular-ellipsis.js"></script>
 <script type="text/javascript" src="vendor/angular-live-set/dist/live-set.js"></script>
 
 <!-- endbower -->
@@ -68,6 +69,8 @@
 
 <script src="scripts/directives/bandcamp.js"></script>
 <script src="scripts/directives/xyz-draggable.js"></script>
+<script src="scripts/directives/media-preview.js"></script>
+<script src="scripts/directives/media-preview-toggle.js"></script>
 <script src="scripts/services/extract.js"></script>
 <script src="scripts/services/social.js"></script>
 
