add ngToast, disappearing errors (fixes #83)

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
   <!-- build:css css/main.min.css -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/xyz-component-style-app-only.css">
+    <link rel="stylesheet" href="vendor/ngToast/dist/ngToast-animations.css">
   <!-- endbuild -->
 
 
@@ -41,6 +42,7 @@
 <script src="vendor/angular-animate/angular-animate.js"></script>
 <script src="vendor/angular-aria/angular-aria.js"></script>
 <script src="vendor/angular-ellipsis/src/angular-ellipsis.js"></script>
+<script src="vendor/ngToast/dist/ngToast.js"></script>
 <script type="text/javascript" src="vendor/angular-live-set/dist/live-set.js"></script>
 
 <!-- endbower -->
@@ -50,7 +52,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.js"></script>
 
 <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
-
 
 <script src="https://w.soundcloud.com/player/api.js"></script>
 
