localizing playlist computation wip

--- a/xyz-player-component/xyz-player.html
+++ b/xyz-player-component/xyz-player.html
@@ -4,6 +4,12 @@
     loading...
   </div>
 
+  <pre class="debug">
+    id:{{spaceId}}
+    space: {{space}}
+    playlist: {{playlist}}
+  </pre>
+
 
   <h4>{{message}}</h4>
 
