xyz player utilizing playlister

--- a/xyz-player-component/xyz-player.html
+++ b/xyz-player-component/xyz-player.html
@@ -4,6 +4,11 @@
     loading...
   </div>
 
+  <pre class="debug" ng-repeat="item in playlist" ng-if="false">
+    playlist: {{item.title}}
+  </pre>
+
+
   <pre class="debug">
     id:{{spaceId}}
     space: {{space}}
