update gulp and browser sync

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
 
 <body >
 
+
 <div ng-controller="BodyCtrl">
 
   <div ui-view>  </div>
@@ -60,6 +61,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/run.js"></script>
 <script src="scripts/router.js"></script>
+<script src="scripts/templates.js"></script>
 
 <script src="scripts/services/library.js"></script>
 <script src="scripts/services/server.js"></script>
