--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
 <script src="vendor/angular-aria/angular-aria.js"></script>
 <script src="vendor/angular-ellipsis/src/angular-ellipsis.js"></script>
 <script src="vendor/ngToast/dist/ngToast.js"></script>
-<script type="text/javascript" src="vendor/angular-live-set/dist/live-set.js"></script>
+<script src="vendor/angular-live-set/dist/live-set.js"></script>
 
 <!-- endbower -->
 
