--- a/client/index.html
+++ b/client/index.html
@@ -131,7 +131,7 @@
 <!-- /build -->
 
 
-<!-- build:template  note: grunt build does not work -->
+<!-- build:template  gulp useref replaces these values with ENV var - provided values -->
 <script>
   angular.module('xyzApp')
       .constant('serverConfig', {
