--- a/client/index.html
+++ b/client/index.html
@@ -112,9 +112,6 @@
 <!-- build:remove -->
 <script>
 
-  //FORMAT of apiBaseUrl: 'http://l.h:5000/'
-
-
   angular.module('xyzApp')
       .constant('serverConfig', {
         apiBaseUrl: 'http://0.0.0.0:5005/api/',// '/',
@@ -123,9 +120,8 @@
       .constant('apiKeys', {
         sc: 'c29e4129f2bba3771a5472a65cad37e4',
         yt: 'AIzaSyAv5-et2TSQ3VsA5eKLviq2KjfExzFLxO8',
-        fb_app_id: '1507355422928214'
+        fb_app_id: '0'
       });
-
 
 </script>
 <!-- /build -->
@@ -138,7 +134,8 @@
         apiBaseUrl: '%%%API_URL'
       })
       .constant('apiKeys', {
-        sc: '%%%scKey', yt: '%%%ytKey', fb_app_id: '%%%facebookAppId'
+        // to re-enable facebook, make the id '%%%facebookAppId'
+        sc: '%%%scKey', yt: '%%%ytKey', fb_app_id: '0'
       });
 </script>
 <!-- /build -->
