use Playlister to keep track of current playing

--- a/stream/index.html
+++ b/stream/index.html
@@ -49,6 +49,7 @@
 
     <script src="../client/scripts/services/mediaapi.js"></script>
     <script src="../client/scripts/services/utility.js"></script>
+    <script src="../client/scripts/services/playlister.js"></script>
     <script type="text/javascript" src="stream-controller.js">
 
     </script>
