--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,7 @@
 <script src="scripts/templates.js"></script>
 
 <script src="scripts/services/library.js"></script>
+<script src="scripts/services/spaces.js"></script>
 <script src="scripts/services/server.js"></script>
 <script src="scripts/services/playlister.js"></script>
 <script src="scripts/services/extract.js"></script>
