play from here button ( fast forward icon ) #151

--- a/xyz-player-component/xyz-player.html
+++ b/xyz-player-component/xyz-player.html
@@ -4,11 +4,11 @@
     loading...
   </div>
 
-  <pre class="debug" ng-if="debug">
+  <debug name="'playlist'" obj="playlist" style="position:fixed; left:0; bottom:0; z-index:30;">
     <span ng-repeat="item in playlist">
-      playlist: {{item.title}}
+      playlist item: {{item.title}}
     </span>
-  </pre>
+  </debug>
 
   <pre class="debug" ng-if="false">
     id:{{spaceId}}
