account forms revamp ( fixes #147 )

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
 <!-- bower:js -->
 <script src="vendor/angular/angular.js"></script>
 <script src="vendor/angular-sanitize/angular-sanitize.js"></script>
+<script src="vendor/angular-messages/angular-messages.js"></script>
 <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="vendor/lodash/lodash.js"></script>
 <script src="vendor/angular-easyfb/build/angular-easyfb.js"></script>
