--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>XYZ ADMIN </title>
+
+  <!-- build:css css/admin-style.min.css -->
   <link rel="stylesheet" type="text/css" href="admin-style.css">
+  <!-- endbuild -->
 
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.css">
 
