improve fullscreen experience (firefox was broken)

--- a/xyz-player-component/xyz-player.html
+++ b/xyz-player-component/xyz-player.html
@@ -22,6 +22,7 @@
           ng-click="toggleFullScreen()"
           >
         {{isFullScreen()?'expand_more': 'expand_less' }}
+        <md-tooltip>Toggle Fullscreen</md-tooltip>
       </md-icon>
     </span>
     <span class="media-controls">
