--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="vendor/ngToast/dist/ngToast-animations.css">
   <!-- endbuild -->
 
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+
 
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
