makeover ( marchien design )

--- a/client/index.html
+++ b/client/index.html
@@ -26,12 +26,11 @@
 
 </head>
 
-<body >
+<body ng-controller="BodyCtrl" >
 
 
-<div ng-controller="BodyCtrl">
 
-  <div ui-view>  </div>
+<div ui-view>
 
 </div>
 
