--- a/admin/base.html
+++ b/admin/base.html
@@ -3,6 +3,7 @@
 <span> logged in as: {{ user | json}}</span> <span > <a ng-click="Dj.logout()" href="#">log out</a></span>
 <ul>
   <li><a ui-sref=".users">Users</a> </li>
+  <li><a ui-sref=".spaces">Spaces</a> </li>
 </ul>
 
 <div ui-view="main">
