change owner of space done

--- a/admin/index.html
+++ b/admin/index.html
@@ -48,6 +48,7 @@
 <!-- build:js scripts/admin-scripts.js -->
 <script src="scripts/admin-app.js"></script>
 <script src="components/users-controller.js"></script>
+<script src="components/spaces-controller.js"></script>
 <script src="../client/scripts/services/user.js"></script>
 <script src="../client/scripts/services/lb-services.js"></script>
 <script src="../client/scripts/services/server.js"></script>
