--- a/client/index.html
+++ b/client/index.html
@@ -4,30 +4,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
   <title ng-bind="title()">XYZ</title>
-  <!--
-    <script type="text/javascript">
-      document.write('<base href="' + document.location + '" />');
-    </script>-->
 
   <!-- build:css css/main.min.css -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/xyz-component-style-app-only.css">
-    <link rel="stylesheet" href="vendor/ngToast/dist/ngToast-animations.css">
+  <link rel="stylesheet" href="vendor/ngToast/dist/ngToast-animations.css">
   <!-- endbuild -->
 
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
-
-  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.css">
+  <link rel="stylesheet"
+        href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-
+        rel="stylesheet">
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
 
 </head>
 
-<body ng-controller="BodyCtrl" >
-
+<body ng-controller="BodyCtrl">
 
 
 <div ui-view>
@@ -88,6 +82,7 @@
 <script src="scripts/directives/media-inspector.js"></script>
 <script src="scripts/directives/media-preview.js"></script>
 <script src="scripts/directives/media-item-dot.js"></script>
+<script src="scripts/directives/icon-of-provider.js"></script>
 
 <script src="scripts/controllers/list.js"></script>
 <script src="scripts/controllers/rename.js"></script>
@@ -102,7 +97,6 @@
 <script src="scripts/controllers/edit-space.js"></script>
 <script src="scripts/controllers/account.js"></script>
 <script src="scripts/controllers/SiteWidePlayerCtrl.js"></script>
-
 
 
 <script src="../xyz-player-component/xyz-player-directive.js"></script>
