--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,7 @@
 <script src="scripts/services/utility.js"></script>
 <script src="scripts/services/player.js"></script>
 <script src="scripts/services/user.js"></script>
+<script src="scripts/services/user-settings.js"></script>
 
 <script src="scripts/services/lb-services.js"></script>
 
