--- a/xyz-player-component/xyz-player.html
+++ b/xyz-player-component/xyz-player.html
@@ -53,8 +53,10 @@
 
       </div>
 
-      <div soundcloud ng-show="Playlister.getNowPlaying().provider === 'soundcloud'"
-           soundid={{soundId}} class="xyz-component-iframe-container">
+      <div soundcloud
+           ng-show="Playlister.getNowPlaying().provider === 'soundcloud'"
+           soundid={{soundId}}
+           class="xyz-component-iframe-container">
         SC player provider view
       </div>
 
