--- a/client/index.html
+++ b/client/index.html
@@ -87,6 +87,7 @@
 <script src="scripts/directives/media-preview.js"></script>
 <script src="scripts/directives/media-item-dot.js"></script>
 <script src="scripts/directives/icon-of-provider.js"></script>
+<script src="scripts/directives/playlist-path.js"></script>
 
 <script src="scripts/controllers/list.js"></script>
 <script src="scripts/controllers/rename.js"></script>
