admin view improvements

--- a/admin/base.html
+++ b/admin/base.html
@@ -1,4 +1,4 @@
-<h1 ui-sref="base">XYZ Admin</h1>
+<h1 ><a ui-sref="base">XYZ Admin</a></h1>
 
 <span> logged in as: {{ user | json}}</span> <span > <a ng-click="Dj.logout()" href="#">log out</a></span>
 <ul>
@@ -6,6 +6,7 @@
   <li><a ui-sref=".spaces">Spaces</a> </li>
 </ul>
 
-<div ui-view="main">
+
+<div ui-view="main" >
 
 </div>
