--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
 <script src="vendor/angular-animate/angular-animate.js"></script>
 <script src="vendor/angular-aria/angular-aria.js"></script>
 <script src="vendor/ngToast/dist/ngToast.js"></script>
+<script src="vendor/web-animations-js/web-animations.min.js"></script>
 
 <!-- endbower -->
 
@@ -64,6 +65,7 @@
 <script src="scripts/templates.js"></script>
 
 <script src="scripts/services/library.js"></script>
+<script src="scripts/services/animations.js"></script>
 <script src="scripts/services/spaces.js"></script>
 <script src="scripts/services/server.js"></script>
 <script src="scripts/services/playlister.js"></script>
