--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,8 @@
 <script src="scripts/directives/media-item-dot.js"></script>
 <script src="scripts/directives/icon-of-provider.js"></script>
 <script src="scripts/directives/playlist-path.js"></script>
+<script src="scripts/directives/playlist.js"></script>
+
 
 <script src="scripts/controllers/list.js"></script>
 <script src="scripts/controllers/rename.js"></script>
