--- a/client/index.html
+++ b/client/index.html
@@ -17,13 +17,13 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/xyz-component-style-app-only.css">
   <link rel="stylesheet" href="vendor/ngToast/dist/ngToast-animations.css">
+  <link rel="stylesheet" href="scripts/tour-dependencies/fonts/sideshow-fontface.min.css">
+  <link rel="stylesheet" href="scripts/tour-dependencies/stylesheets/sideshow.min.css">
   <!-- endbuild -->
 
 
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
 
-  <link rel="stylesheet" href="http://fortesinformatica.github.io/Sideshow/distr/fonts/sideshow-fontface.min.css">
-  <link rel="stylesheet" href="http://fortesinformatica.github.io/Sideshow/distr/stylesheets/sideshow.min.css">
 
 </head>
 
