--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <title ng-bind="title()">XYZ</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:300,400,600" rel="stylesheet">
 
   <link rel="stylesheet"
         href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.css">
@@ -17,10 +17,8 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/xyz-component-style-app-only.css">
   <link rel="stylesheet" href="vendor/ngToast/dist/ngToast-animations.css">
-  <link rel="stylesheet" href="scripts/tour-dependencies/fonts/sideshow-fontface.min.css">
-  <link rel="stylesheet" href="scripts/tour-dependencies/stylesheets/sideshow.min.css">
+  <link rel="stylesheet" href="scripts/tour-dependencies/stylesheets/sideshow.css">
   <!-- endbuild -->
-
 
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
 
