--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 
+
 <script src="scripts/tour-dependencies/jquery.min.js"></script>
 <script src="scripts/tour-dependencies/jazz.min.js"></script>
 <script src="scripts/tour-dependencies/pagedown.min.js"></script>
@@ -71,6 +72,7 @@
 <script src="scripts/run.js"></script>
 <script src="scripts/router.js"></script>
 <script src="scripts/templates.js"></script>
+<script src="scripts/tour.js"></script>
 
 <script src="scripts/services/library.js"></script>
 <script src="scripts/services/animations.js"></script>
@@ -150,53 +152,6 @@
       .constant('apiKeys', {
         // to re-enable facebook, make the id '%%%facebookAppId'
         sc: '%%%scKey', yt: '%%%ytKey', fb_app_id: '0'
-      })
-      .run(function ($location, $window) {
-
-        var Sideshow = $window.Sideshow;
-        Sideshow.config.language = "en";
-        Sideshow.init();
-        Sideshow.registerWizard({
-          name: "introducing_sideshow",
-          title: "Introducing Sideshow",
-          description: "Introducing the main features and concepts of Sideshow. ",
-          estimatedTime: "10 Minutes",
-          affects: [
-            {hash: ""}, //This tutorial would be eligible for URLs like this "http://www.foo.com/bar#messages"
-            {route: "", caseSensitive: true},  //This tutorial would be eligible for URLs like this "http://www.foo.com/adm/orders"
-            function () {
-              //Here we could do any checking to infer if this tutorial is eligible the current screen/context.
-              //After this checking, just return a boolean indicating if this tutorial will be available.
-              return true;//
-            }
-          ]
-        })
-            .storyLine({
-              showStepPosition: true,
-              steps: [
-                {
-                  title: "Hello Sideshow.",
-                  text: "log in here",
-                  subject: "#signup-login-link",
-                  targets: "#signup-login-link"
-                },
-                {
-                  title: "enter your email",
-                  text: "an email",
-                  subject: "#register-email-field",
-                  targets: "#register-email-field"
-                },
-                {
-                  title: "enter a password",
-                  text: "enter a password that has minimum 4 characters",
-                  subject: "#register-password-field",
-                  targets: "#register-password-field"
-                }
-              ]
-            });
-
-
-        Sideshow.start({listAll: true});
       })
 </script>
 <!-- /build -->
