include cms url in dev config

--- a/client/index.html
+++ b/client/index.html
@@ -123,6 +123,7 @@
   angular.module('xyzApp')
       .constant('serverConfig', {
         apiBaseUrl: 'http://0.0.0.0:5005/api/',// '/',
+        cmsUrl: 'https://cms.xyz.gs/',
         developing: true
       })
       .constant('apiKeys', {
