tour loading from cms

--- a/client/index.html
+++ b/client/index.html
@@ -129,7 +129,8 @@
   angular.module('xyzApp')
       .constant('serverConfig', {
         apiBaseUrl: 'http://0.0.0.0:5005/api/',// '/',
-        developing: true
+        developing: true,
+        cmsUrl: 'https://cms.xyz.gs/'
       })
       .constant('apiKeys', {
         sc: 'cb16ad8471c6da3d93dc120fb8160b89',
