--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
 
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#537281"/>
+
   <!-- build:css css/main.min.css -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/xyz-component-style-app-only.css">
